objects/copado__Data_Template__c.object
<CustomObject>
    <fields>
        <fullName>copado__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Attachment_Options__c</fullName>
        <label>Attachment Actions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Attachments</fullName>
                    <default>true</default>
                    <label>No Attachments</label>
                </value>
                <value>
                    <fullName>Insert Attachments</fullName>
                </value>
                <value>
                    <fullName>Replace Attachments</fullName>
                </value>
                <value>
                    <fullName>Remove Attachments</fullName>
                </value>
                <value>
                    <fullName>Upsert Attachments</fullName>
                    <isActive>false</isActive>
                    <label>Upsert Attachments</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Batch_Size__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Continue_on_Error__c</fullName>
        <label>Continue on Error</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Continue deployment until blocker issue</fullName>
                    <default>true</default>
                    <label>Continue deployment until blocker issue</label>
                </value>
                <value>
                    <fullName>Stop deployment on first issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Description__c</fullName>
        <label>Description</label>
        <length>256</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado__Filter_Logic__c</fullName>
        <defaultValue>TEXT(1)</defaultValue>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Main_Object__c</fullName>
        <label>Main Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Match_Owners__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Owners</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Match_Record_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Record Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Max_Record_Limit__c</fullName>
        <label>Max. Record Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Template_Source_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Schema Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>Data Templates</relationshipLabel>
        <relationshipName>Data_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Data Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active</label>
    </listViews>
    <listViews>
        <fullName>Bak</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Bak</value>
        </filters>
        <label>Bak</label>
    </listViews>
    <listViews>
        <fullName>Budget</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Budget</value>
        </filters>
        <label>Budget</label>
    </listViews>
    <listViews>
        <fullName>Collateral_Type</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Collateral Type</value>
        </filters>
        <label>Collateral Type</label>
    </listViews>
    <listViews>
        <fullName>Configuration_Objects</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Configuration</value>
        </filters>
        <label>Configuration Objects</label>
    </listViews>
    <listViews>
        <fullName>Configuration_Value_and_Key</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Configuration Values and Keys</value>
        </filters>
        <label>Configuration Value and Key</label>
    </listViews>
    <listViews>
        <fullName>Credit_Memo</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Credit Memo</value>
        </filters>
        <label>Credit Memo</label>
    </listViews>
    <listViews>
        <fullName>Document_manager</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>DocM</value>
        </filters>
        <label>Document manager</label>
    </listViews>
    <listViews>
        <fullName>Fee_Management</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Fee Management</value>
        </filters>
        <label>Fee Management</label>
    </listViews>
    <listViews>
        <fullName>Form_Generation</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Form Generation</value>
        </filters>
        <label>Form Generation</label>
    </listViews>
    <listViews>
        <fullName>Matrix_Manager</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <columns>copado__Template_Source_Org__c</columns>
        <columns>copado__Attachment_Options__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino Matrix Manager</value>
        </filters>
        <label>Matrix Manager</label>
    </listViews>
    <listViews>
        <fullName>NCino_UI</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>nCino UI</value>
        </filters>
        <label>NCino UI</label>
    </listViews>
    <listViews>
        <fullName>Primary_Templates</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Primary</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>nCino Configuration</value>
        </filters>
        <label>Primary Templates</label>
    </listViews>
    <listViews>
        <fullName>Product_Heirarchy</fullName>
        <columns>NAME</columns>
        <columns>copado__Main_Object__c</columns>
        <columns>copado__Active__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Hierarchy</value>
        </filters>
        <label>Product Heirarchy Full</label>
    </listViews>
    <nameField>
        <label>Data Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>